--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
         <script src="app.js" defer></script>
     </head>
     <body>
-        <div class="banner_cont">
+        <!-- <div class="banner_cont">
             <img src="img/Logo_banner.png" />
         </div>
+         -->
         <section class="full_container">
             <div class="content">
                 <div class="boxes_container">
@@ -78,7 +79,7 @@
                         <button class="key" value="L">L</button>
                     </div>
                     <div class="col1">
-                        <button class="key" value="Enter">Enter</button>
+                        <button class="key" value="ent">Enter</button>
                         <button class="key" value="Z">Z</button>
                         <button class="key" value="X">X</button>
                         <button class="key" value="C">C</button>
@@ -86,7 +87,7 @@
                         <button class="key" value="B">B</button>
                         <button class="key" value="N">N</button>
                         <button class="key" value="M">M</button>
-                        <button class="key" value="Delete">
+                        <button class="key" value="del">
                             <i class="fa-solid fa-delete-left"></i>
                         </button>
                     </div>
