--- a/index.html
+++ b/index.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
-        <link rel="stylesheet" href="style.css" />
-        <link rel="icon" href="/img/Logo.png" />
-        <script
-            src="https://kit.fontawesome.com/47912b74b2.js"
-            crossorigin="anonymous"
-        ></script>
-        <script src="app.js" defer></script>
-    </head>
-    <body>
-        <!-- <div class="banner_cont">
-            <img src="img/Logo_banner.png" />
-        </div>
-         -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="/img/Logo.png" />
+    <script
+      src="https://kit.fontawesome.com/47912b74b2.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="app.js" defer></script>
+  </head>
+  <body>
+    <!-- 
         <section class="full_container">
             <div class="content">
                 <div class="boxes_container">
@@ -94,5 +91,56 @@
                 </div>
             </div>
         </section>
-    </body>
+    -->
+    <section class="menu_container">
+      <div class="exit_btn">
+        <button>
+          <i class="fa-solid fa-right-from-bracket"></i>
+        </button>
+      </div>
+      <div class="menu_content">
+        <div class="menu_head">
+          <h3>STATISTICS</h3>
+        </div>
+        <div class="menu_stat">
+          <div class="menu_stat_top">
+            <strong>4</strong>
+            <p>played</p>
+          </div>
+          <div class="menu_stat_bottom">
+            <ul>
+              <li>
+                <div>0</div>
+                <span>1</span>
+              </li>
+              <li>
+                <div>0</div>
+                <span>2</span>
+              </li>
+              <li>
+                <div>0</div>
+                <span>3</span>
+              </li>
+              <li>
+                <div>0</div>
+                <span>4</span>
+              </li>
+              <li>
+                <div>0</div>
+                <span>5</span>
+              </li>
+              <li>
+                <div>0</div>
+                <span>6</span>
+              </li>
+            </ul>
+            <p>Guess</p>
+          </div>
+          <div class="menu_game_start">
+            <button>Start</button>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
