--- a/index.html
+++ b/index.html
@@ -13,88 +13,87 @@
     <script src="app.js" defer></script>
   </head>
   <body>
-    <!-- 
-        <section class="full_container">
-            <div class="content">
-                <div class="boxes_container">
-                    <div class="display_boxes">
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                    </div>
-                </div>
+    <section class="full_container">
+      <div class="content">
+        <div class="boxes_container">
+          <div class="display_boxes">
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+          </div>
+        </div>
 
-                <div class="keyboard_container">
-                    <div class="col1">
-                        <button class="key" value="Q">Q</button>
-                        <button class="key" value="W">W</button>
-                        <button class="key" value="E">E</button>
-                        <button class="key" value="R">R</button>
-                        <button class="key" value="T">T</button>
-                        <button class="key" value="Y">Y</button>
-                        <button class="key" value="U">U</button>
-                        <button class="key" value="I">I</button>
-                        <button class="key" value="O">O</button>
-                        <button class="key" value="P">P</button>
-                    </div>
-                    <div class="col1">
-                        <button class="key" value="A">A</button>
-                        <button class="key" value="S">S</button>
-                        <button class="key" value="D">D</button>
-                        <button class="key" value="F">F</button>
-                        <button class="key" value="G">G</button>
-                        <button class="key" value="H">H</button>
-                        <button class="key" value="J">J</button>
-                        <button class="key" value="K">K</button>
-                        <button class="key" value="L">L</button>
-                    </div>
-                    <div class="col1">
-                        <button class="key" value="ent">Enter</button>
-                        <button class="key" value="Z">Z</button>
-                        <button class="key" value="X">X</button>
-                        <button class="key" value="C">C</button>
-                        <button class="key" value="V">V</button>
-                        <button class="key" value="B">B</button>
-                        <button class="key" value="N">N</button>
-                        <button class="key" value="M">M</button>
-                        <button class="key" value="del">
-                            <i class="fa-solid fa-delete-left"></i>
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </section>
-    -->
+        <div class="keyboard_container">
+          <div class="col1">
+            <button class="key" value="Q">Q</button>
+            <button class="key" value="W">W</button>
+            <button class="key" value="E">E</button>
+            <button class="key" value="R">R</button>
+            <button class="key" value="T">T</button>
+            <button class="key" value="Y">Y</button>
+            <button class="key" value="U">U</button>
+            <button class="key" value="I">I</button>
+            <button class="key" value="O">O</button>
+            <button class="key" value="P">P</button>
+          </div>
+          <div class="col1">
+            <button class="key" value="A">A</button>
+            <button class="key" value="S">S</button>
+            <button class="key" value="D">D</button>
+            <button class="key" value="F">F</button>
+            <button class="key" value="G">G</button>
+            <button class="key" value="H">H</button>
+            <button class="key" value="J">J</button>
+            <button class="key" value="K">K</button>
+            <button class="key" value="L">L</button>
+          </div>
+          <div class="col1">
+            <button class="key" value="ent">Enter</button>
+            <button class="key" value="Z">Z</button>
+            <button class="key" value="X">X</button>
+            <button class="key" value="C">C</button>
+            <button class="key" value="V">V</button>
+            <button class="key" value="B">B</button>
+            <button class="key" value="N">N</button>
+            <button class="key" value="M">M</button>
+            <button class="key" value="del">
+              <i class="fa-solid fa-delete-left"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="menu_container">
-      <div class="exit_btn">
-        <button>
+      <div class="exit_box">
+        <button id="exit_btn">
           <i class="fa-solid fa-right-from-bracket"></i>
         </button>
       </div>
@@ -137,7 +136,7 @@
             <p>Guess</p>
           </div>
           <div class="menu_game_start">
-            <button>Start</button>
+            <button id="start_btn">Start</button>
           </div>
         </div>
       </div>
