--- a/index.html
+++ b/index.html
@@ -103,33 +103,33 @@
         </div>
         <div class="menu_stat">
           <div class="menu_stat_top">
-            <strong>4</strong>
+            <strong>0</strong>
             <p>played</p>
           </div>
           <div class="menu_stat_bottom">
             <ul>
               <li>
-                <div>0</div>
+                <div class="scoreBoxes">0</div>
                 <span>1</span>
               </li>
               <li>
-                <div>0</div>
+                <div class="scoreBoxes">0</div>
                 <span>2</span>
               </li>
               <li>
-                <div>0</div>
+                <div class="scoreBoxes">0</div>
                 <span>3</span>
               </li>
               <li>
-                <div>0</div>
+                <div class="scoreBoxes">0</div>
                 <span>4</span>
               </li>
               <li>
-                <div>0</div>
+                <div class="scoreBoxes">0</div>
                 <span>5</span>
               </li>
               <li>
-                <div>0</div>
+                <div class="scoreBoxes">0</div>
                 <span>6</span>
               </li>
             </ul>
