--- a/index.html
+++ b/index.html
@@ -13,6 +13,23 @@
         <script src="app.js" defer></script>
     </head>
     <body>
+        <nav>
+            <div class="navbar">
+                <div class="nav_header">Wordle</div>
+                <ul>
+                    <li>
+                        <button>
+                            <i class="fa-solid fa-circle-question"></i>
+                        </button>
+                    </li>
+                    <li>
+                        <div class="theme_switch_btn">
+                            <span></span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </nav>
         <section class="full_container">
             <div class="content">
                 <div class="boxes_container">
